policies/allow-heroes-ro-events-kafka.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"cilium.io/v2","kind":"CiliumNetworkPolicy","metadata":{"annotations":{},"name":"allow-heroes-ro-events-kafka","namespace":"default"},"spec":{"endpointSelector":{"matchLabels":{"strimzi.io/name":"my-cluster-kafka"}},"ingress":[{"fromEndpoints":[{"matchLabels":{"k8s:io.kubernetes.pod.namespace":"events"}}],"toPorts":[{"ports":[{"port":"9092","protocol":"TCP"}],"rules":{"kafka":[{"role":"produce","topic":"events"},{"role":"consume","topic":"events"}]}}]}]}}
  creationTimestamp: "2019-04-08T14:38:43Z"
  generation: 2
  name: allow-heroes-ro-events-kafka
  namespace: default
  resourceVersion: "232263"
  selfLink: /apis/cilium.io/v2/namespaces/default/ciliumnetworkpolicies/allow-heroes-ro-events-kafka
  uid: 0218b057-5a0c-11e9-ae5e-42010af0000a
spec:
  endpointSelector:
    matchLabels:
      strimzi.io/cluster: my-cluster
  ingress:
  - fromEndpoints:
    - matchLabels:
        k8s:io.kubernetes.pod.namespace: events
    toPorts:
    - ports:
      - port: "9092"
        protocol: TCP
      rules:
        kafka:
        - role: produce
          topic: events
        - role: consume
          topic: events
status:
  nodes:
    controller-0:
      annotations:
        kubectl.kubernetes.io/last-applied-configuration: |
          {"apiVersion":"cilium.io/v2","kind":"CiliumNetworkPolicy","metadata":{"annotations":{},"name":"allow-heroes-ro-events-kafka","namespace":"default"},"spec":{"endpointSelector":{"matchLabels":{"strimzi.io/name":"my-cluster-kafka"}},"ingress":[{"fromEndpoints":[{"matchLabels":{"k8s:io.kubernetes.pod.namespace":"events"}}],"toPorts":[{"ports":[{"port":"9092","protocol":"TCP"}],"rules":{"kafka":[{"role":"produce","topic":"events"},{"role":"consume","topic":"events"}]}}]}]}}
      enforcing: true
      lastUpdated: "2019-04-09T19:33:10.727968172Z"
      localPolicyRevision: 30
      ok: true
    worker-0:
      annotations:
        kubectl.kubernetes.io/last-applied-configuration: |
          {"apiVersion":"cilium.io/v2","kind":"CiliumNetworkPolicy","metadata":{"annotations":{},"name":"allow-heroes-ro-events-kafka","namespace":"default"},"spec":{"endpointSelector":{"matchLabels":{"strimzi.io/name":"my-cluster-kafka"}},"ingress":[{"fromEndpoints":[{"matchLabels":{"k8s:io.kubernetes.pod.namespace":"events"}}],"toPorts":[{"ports":[{"port":"9092","protocol":"TCP"}],"rules":{"kafka":[{"role":"produce","topic":"events"},{"role":"consume","topic":"events"}]}}]}]}}
      enforcing: true
      lastUpdated: "2019-04-09T19:33:10.738528673Z"
      localPolicyRevision: 30
      ok: true
    worker-1:
      annotations:
        kubectl.kubernetes.io/last-applied-configuration: |
          {"apiVersion":"cilium.io/v2","kind":"CiliumNetworkPolicy","metadata":{"annotations":{},"name":"allow-heroes-ro-events-kafka","namespace":"default"},"spec":{"endpointSelector":{"matchLabels":{"strimzi.io/name":"my-cluster-kafka"}},"ingress":[{"fromEndpoints":[{"matchLabels":{"k8s:io.kubernetes.pod.namespace":"events"}}],"toPorts":[{"ports":[{"port":"9092","protocol":"TCP"}],"rules":{"kafka":[{"role":"produce","topic":"events"},{"role":"consume","topic":"events"}]}}]}]}}
      enforcing: true
      lastUpdated: "2019-04-09T19:33:10.937421304Z"
      localPolicyRevision: 30
      ok: true
    worker-2:
      annotations:
        kubectl.kubernetes.io/last-applied-configuration: |
          {"apiVersion":"cilium.io/v2","kind":"CiliumNetworkPolicy","metadata":{"annotations":{},"name":"allow-heroes-ro-events-kafka","namespace":"default"},"spec":{"endpointSelector":{"matchLabels":{"strimzi.io/name":"my-cluster-kafka"}},"ingress":[{"fromEndpoints":[{"matchLabels":{"k8s:io.kubernetes.pod.namespace":"events"}}],"toPorts":[{"ports":[{"port":"9092","protocol":"TCP"}],"rules":{"kafka":[{"role":"produce","topic":"events"},{"role":"consume","topic":"events"}]}}]}]}}
      enforcing: true
      lastUpdated: "2019-04-09T19:33:10.513015728Z"
      localPolicyRevision: 20
      ok: true
